--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
@@ -25,9 +26,7 @@ flutter:
     - family: Brand-Bold
       fonts:
         - asset: assets/fonts/GemunuLibre-Bold.ttf
-       
-          
+
     - family: Semi-Bold
       fonts:
         - asset: assets/fonts/GemunuLibre-SemiBold.ttf
-        
