--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,14 @@ environment:
   sdk: '>=3.2.1 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.13.6
+  firebase_auth: ^4.15.3
+  firebase_core: ^2.24.2
+  firebase_storage: ^11.5.6
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
+  image_picker: ^1.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
