--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.2.1 <4.0.0'
 
 dependencies:
+  cached_network_image: ^3.3.0
   cloud_firestore: ^4.13.6
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
@@ -15,6 +16,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.9
   image_picker: ^1.0.5
+  shimmer_animation: ^2.1.0+1
 
 dev_dependencies:
   flutter_lints: ^3.0.1
